--- a/src/components/front/front-edu/pages/vgu2025cpp/m2.html
+++ b/src/components/front/front-edu/pages/vgu2025cpp/m2.html
@@ -38,6 +38,12 @@
   <p><a href="#p7.5">7.5 Наследование в шаблонах классов (64)</a></p>
   <p><a href="#p8">8 Методология программирования (65)</a></p>
   <p><a href="#p8.1">8.1 Декомпозиция и абстракция (66)</a></p>
+  <p><a href="#p8.2">8.2 Абстракция через параметризацию (68)</a></p>
+  <p><a href="#p8.3">8.3 Абстракция через спецификацию (69)</a></p>
+  <p><a href="#p8.4">8.4 Процедурная абстракция (71)</a></p>
+  <p><a href="#p8.5">8.5 Абстракция данных (73)</a></p>
+  <p><a href="#p8.6">8.6 Классы операций (75)</a></p>
+  <p><a href="#p8.7">8.7 Полнота (75)</a></p>
 </article>
 
 
@@ -1371,5 +1377,72 @@ Trio&lt;X&gt;::Trio(X _a, X _b, X _c) : Pair &lt;X&gt; (_a, _b), c(_c) {}
   <p>Стадии декомпозиции должен предшествовать этап абстракции. Мы абстрагируемся от деталей реализации и сводим задачу к более простой, после чего декомпозиция такой задачи окажется более простой по сравнению с исходной.</p>
   <p>Пример 2. Группа авторов предварительно оговаривает сюжет пьесы, смысл отдельных диалогов и т.п.</p>
   <p>Декомпозиция нужна для разбиения программ на модули, которые затем могут быть объединены для решения основной задачи. Абстрагирование предлагает продуманный выбор таких модулей.</p>
-  <p>Эффективной возможностью предусмотреть механизмы, которые позволяли бы программисту создавать свои собственные абстракции является использование функций.</p>
+  <p>Эффективной возможностью предусмотреть механизмы, которые позволяли бы программисту создавать свои собственные абстракции является использование функций. Разделяя в программе тело функции и обращение к ней, язык позволяет реализовать два важных метода абстракции: <strong>абстракцию через параметризацию</strong> и <strong>абстракцию через спецификацию</strong>.</p>
+</article>
+
+
+<!-- 8.2 Абстракция через параметризацию -->
+<article class="article">
+  <div class="anchor" id="p8.2"></div>
+  <h3>8.2 Абстракция через параметризацию</h3>
+
+  <p>Абстракция через параметризацию позволяет, используя параметры, в любом месте программы выполнить одни и те же действия над различными данными. Это делает фунцию более универсальной.</p>
+</article>
+
+
+<!-- 8.3 Абстракция через спецификацию -->
+<article class="article">
+  <div class="anchor" id="p8.3"></div>
+  <h3>8.3 Абстракция через спецификацию</h3>
+
+  <p>Абстракция через параметризацию позволяет не обращаться к телу самой функции, чтобы понять что она делает. Смысл функции должен быть понятен через спецификацию. Спецификачия описывает соглашение между разработчиком и пользователем. Всю информацию для использования функции разработчик помещает в спецификацию. Пользователь использует функцию не полагаясь на ее реализацию а полагаясь только на спецификацию.</p>
+  <p>Абстракция через параметризацию и через спецификацию позволяют определить два типа абстраций: процедурную абстракцию и абстракцию данных, каждый из которых использует оба описанных выше подхода.</p>
+</article>
+
+
+<!-- 8.4 Процедурная абстракция -->
+<article class="article">
+  <div class="anchor" id="p8.4"></div>
+  <h3>8.4 Процедурная абстракция</h3>
+
+  <p>Процедурная абстракция - наиболее известный в программировании тип абстракции. Всякий кто использовал подпрограммы, реализовывал тем самым процедурную абстракцию.</p>
+  <p>В абстракции через параметризацию мы абстрагируемся от конкретных используемых данных. Нам не важно какие значения имеют данные, важно только их количество и тип.</p>
+  <p>В абстракции через спецификацию нам важно <strong>что</strong> делает функция, а не то <strong>как</strong> она это делает.</p>
+  <p>Абстракция через спецификацию наделяет структуру программы <strong>локальностью</strong> и <strong>модифицируемостью</strong>.</p>
+  <p>Локальность означает, что анализ одной абстракции не зависит от анализа другой абстракции. Это позволяет состовлять программу из абстракций, созданных разными людьми.</p>
+  <p>Модифицируемость означает, что изменение реализации абстракции не затрагивает ее спецификацию. Поэтому не нужно вносить изменения в программу, использующую эту абстракцию.</p>
+</article>
+
+
+<!-- 8.5 Абстракция данных -->
+<article class="article">
+  <div class="anchor" id="p8.5"></div>
+  <h3>8.5 Абстракция данных</h3>
+
+  <p>Новые типы данных должны включать в себя абстракции через параметризацию и абстракции через спецификацию. Абстракция через параметризацию осуществляется использованием параметров там, где это имеет смысл. Абстракция через спецификацию достигается за счет того, что мы представляем операции как часть пипа. При отсутствии прямого доступа к данным, имеется необходимый набор операций для работы с данными.</p>
+  <p>Абстракция данных позволяет проектировать программу еще до выбора конкретных структур данных, опираясь только на спецификацию абстракции. Потом при выборе или изменении структур данных не нужно будет менять саму программу.</p>
+</article>
+
+
+<!-- 8.6 Классы операций -->
+<article class="article">
+  <div class="anchor" id="p8.6"></div>
+  <h3>8.6 Классы операций</h3>
+
+  <p>Операции абстракции данных распадаются на четыре категории.</p>
+  <ol>
+    <li>Примитивные конструкторы. Эти операции создают объекты не используя никаких объектов в качестве аргументов.</li>
+    <li>Конструкторы. Эти операции используют в качестве аргументов объекты и создают другие объекты такого же типа.</li>
+    <li>Модификаторы. Эти операции модифицируют объекты соответствующего им типа. Например, оператор push для стека.</li>
+    <li>Наблюдатели. Эти операции используются для получения информации об объекте. Например, оператор size.</li>
+  </ol>
+</article>
+
+
+<!-- 8.7 Полнота -->
+<article class="article">
+  <div class="anchor" id="p8.7"></div>
+  <h3>8.7 Полнота</h3>
+
+  <p>Тип данных является полным, если он обеспечивает достаточный набор операций. Абстракция данных должна содержать в себе операции как минимум из трех категорий. Например, примитивные конструкторы, наблюдатели, модификаторы.</p>
 </article>
