--- a/src/components/front/front-edu/pages/elem-edu-vgu2025cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-vgu2025cpp.html
@@ -30,12 +30,12 @@
   <h2>Конспект занятий</h2>
 
   <p><a href="lec-0.html" class="js-vgu2025-cpp">(21.10.2025 вт) Занятие Вводное</a></p>
-  <p><a href="lec-1b.html" class="js-vgu2025-cpp">(24.10.2025 пт) 2гр Занятие 1. Паттерны</a></p>
+  <p><a href="lec-1b.html" class="js-vgu2025-cpp">(24.10.2025 пт) 2гр Занятие 1. Паттерны. Стратегия. Шаблон. Фабрика</a></p>
   <p><a href="lec-1a.html" class="js-vgu2025-cpp">(25.10.2025 сб) 1гр Занятие 1. Классы</a></p>
   <p><a href="lec-1ap.html" class="js-vgu2025-cpp">(27.10.2025 пн) 1гр Практика по занятию 1. Классы</a></p>
   <p><a href="lec-2a.html" class="js-vgu2025-cpp">(28.10.2025 вт) 1гр Занятие 2. Наследование</a></p>
   <p><a href="lec-1bp.html" class="js-vgu2025-cpp">(30.10.2025 чт) 2гр Практика по занятию 1. Паттерны</a></p>
-  <p><a href="lec-2b.html" class="js-vgu2025-cpp">(31.10.2025 пт) 2гр Занятие 2. Паттерны</a></p>
+  <p><a href="lec-2b.html" class="js-vgu2025-cpp">(31.10.2025 пт) 2гр Занятие 2. Паттерны. Команда</a></p>
   <p><a href="m1.html" class="js-vgu2025-cpp">Конспект методички ч1</a></p>
   <p><a href="m2.html" class="js-vgu2025-cpp">Конспект методички ч2</a></p>
 </article>
