--- a/src/components/alg/alg-base/alg-yandex/pages/elem-ya-cup2025.html
+++ b/src/components/alg/alg-base/alg-yandex/pages/elem-ya-cup2025.html
@@ -67,6 +67,9 @@ YES
 
   <details>
     <summary>Решение</summary>
+    <p>Сначала проверим, что можно собрать квадрат. Число камешек не превышает 2500, это квадрат со стороной 50.</p>
+    <p>Если сторона квадрата нечетная, то всегда можно собрать красивую мозаику.</p>
+    <p>Если сторона квадрата четная, то число камешек одного цвета должна быть четная. Заметим, что в этом случае четность белых и черных камешек одинаковая, поэтому нет разницы какие камешки проверять на четность.</p>
 <pre>
 #include &lt;iostream&gt;
 
@@ -190,7 +193,119 @@ int main() {
 
   <details>
     <summary>Решение</summary>
-    <p>Для каждой ячейки посчитаем число совпадающих ячеек вниз.</p>
+    <p>Соберем две матрицы для первой и второй мозаики. Заведем матрицу DP размером n+1 на m+1 изначально заполненую нулями. +1 нужно для рамки снизу и справа. Для каждой ячейки DP[i][j] посчитаем число совпадающих ячеек вниз.</p>
+    <p>Для каждой ячейки DP[i][j] будем считать сумму совпадающих элементов мозаики в прямоугольнике, где ячейка DP[i][j] лежит в верхнем левом углу.</p>
+    <p>Для этого заведем стек. Пройдем по ячейкам DP[i][j].</p>
+    <p>Если в ячейке ненулевая высота, то проверяем если стек пустой, то кладем в него высоту DP[i][j] и запоминаем текущую высоту. Если стек не пустой, проверяем если текущая высота не более высоты DP[i][j], то кладем в стек высоту DP[i][j], иначе если высота DP[i][j] меньше текущей высоты, то обновляем сумму, кладем высоту DP[i][j] в стек и обновляем текущую высоту.</p>
+    <p>Если в ячейке нулевая высота, проверяем если есть непосчитанная сумма, обновляем сумму, очищаем стек, обнуляем текущую высоту. Иначе ничего не делаем.</p>
+    <p>При переходе на новую строку, проверяем если есть непосчитанная сумма обновляем сумму, очищаем стек, обнуляем текущую высоту и начинаем собирать новый прямоугольник. Иначе ничего не делаем.</p>
+
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;string&gt;
+#include &lt;stack&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+    // условная компиляция
+  #ifdef _DEBUG
+    freopen("input.txt", "rt", stdin);
+    freopen("output.txt", "wt", stdout);
+  #endif
+
+  int t; // число тестов
+  cin >> t;
+
+  while (t--) {
+    int n, m; // размер мозаики
+    cin >> n >> m;
+
+    vector&lt;string&gt; A(n+1); // первая мозаика
+    for (int i = 0; i &lt; n; i++) {
+      cin >> A[i];
+    }
+    vector&lt;string&gt; B(n+1); // вторая мозаика
+    for (int i = 0; i &lt; n; i++) {
+      cin >> B[i];
+    }
+
+    // матрица из n+1 строк и m+1 столбцов
+    // заполненная нулями
+    vector&lt;vector&lt;int&gt; &gt; DP(n+1, vector&lt;int&gt; (m+1, 0));
+
+    // для каждой ячейки посчитаем число
+    // совпадающих ячеек вниз
+    for (int i = n-1; i >= 0; i--) {
+      for (int j = 0; j &lt; m; j++) {
+        if (A[i][j] == B[i][j]) {
+          DP[i][j] = DP[i + 1][j] + 1;
+        } else {
+          DP[i][j] = 0;
+        }
+      }
+    }
+
+    stack&lt;int&gt; st;
+    int cur_h = 0; // текущая высота
+    int cur_sum = 0; // текущая сумма
+    int sum = 0; // сумма
+
+    // считаем максимальную сумму прямоугольника
+    // если каждый элемент поставить
+    // в левый верхний угол прямоугольника
+    for (int i = 0; i &lt; n; i++) {
+      for (int j = 0; j &lt; m; j++) {
+        if (DP[i][j]) {
+          // если есть столбик вниз
+          if (st.empty()) {
+            st.push(DP[i][j]);
+            cur_h = st.top();
+          } else if (cur_h &lt;= DP[i][j]) {
+            st.push(DP[i][j]);
+          } else {
+            st.push(DP[i][j]);
+            cur_h = st.top();
+            // обновить сумму
+            cur_sum = st.size() * cur_h;
+            sum = max(sum, cur_sum);
+          }
+        } else if (cur_h) {
+          // если нет столбика вниз
+          // но есть непосчитанная сумма
+          // обновить сумму
+          cur_sum = st.size() * cur_h;
+          sum = max(sum, cur_sum);
+          // очистить стек
+          while (st.size()) {
+            st.pop();
+          }
+          // очистить текущую высоту
+          cur_h = 0;
+        }
+      }
+
+      // при переходе на новую строчку
+      if (cur_h) {
+        // если есть непосчитанная сумма
+        // обновить сумму
+        cur_sum = st.size() * cur_h;
+        sum = max(sum, cur_sum);
+        // очистить стек
+        while (st.size()) {
+          st.pop();
+        }
+        // очистить текущую высоту
+        cur_h = 0;
+      }
+    }
+
+    cout &lt;&lt; sum &lt;&lt; '\n';
+  }
+}
+</pre>
   </details>
 </article>
 
