--- a/src/components/alg/alg-base/alg-yandex/pages/elem-ya-cup2025.html
+++ b/src/components/alg/alg-base/alg-yandex/pages/elem-ya-cup2025.html
@@ -2,7 +2,7 @@
 
 
 <article class="article">
-  <p><a href="https://new.contest.yandex.ru/contests/84268/problem">new.contest.yandex.ru/contests/84268/problem</a></p>
+  <p><a href="https://new.contest.yandex.ru/contests/84268/problem" target="_blank">new.contest.yandex.ru/contests/84268/problem</a></p>
   <p>Контест состоялся 2 ноября 2025 вс с 17.00 до 21.00. Всего надо решить 11 задач за 4 часа.</p>
 </article>
 
@@ -193,10 +193,33 @@ int main() {
 
   <details>
     <summary>Решение</summary>
-    <p>Соберем две матрицы для первой и второй мозаики. Заведем матрицу DP размером n+1 на m+1 изначально заполненую нулями. +1 нужно для рамки снизу и справа. Для каждой ячейки DP[i][j] посчитаем число совпадающих ячеек вниз.</p>
-    <p>Для каждой ячейки DP[i][j] будем считать сумму совпадающих элементов мозаики в прямоугольнике, где ячейка DP[i][j] лежит в верхнем левом углу.</p>
-    <p>Для этого заведем стек. Пройдем по ячейкам DP[i][j].</p>
-    <p>Если в ячейке ненулевая высота, то проверяем если стек пустой, то кладем в него высоту DP[i][j] и запоминаем текущую высоту. Если стек не пустой, проверяем если текущая высота не более высоты DP[i][j], то кладем в стек высоту DP[i][j], иначе если высота DP[i][j] меньше текущей высоты, то обновляем сумму, кладем высоту DP[i][j] в стек и обновляем текущую высоту.</p>
+
+    <h4>Пример 2</h4>
+<pre>
+1
+6 6
+111111
+111111
+111111
+111111
+111111
+111111
+111111
+011111
+001111
+000111
+000011
+000001
+</pre>
+<pre>
+12
+</pre>
+
+    <p>Соберем две матрицы для первой и второй мозаики.</p>
+    <p>Создадим матрицу H размером n+1 на m, заполненую нулями, для хранения высот прямоугольников. +1 нужно для рамки снизу. Для каждой ячейки H[i][j] посчитаем число совпадающих ячеек вниз.</p>
+    <p>Создадим стек st для отслеживания индексов столбцов матрицы H. По разнице индексов будем находить ширину прямоугольника.</p>
+    <p>Будем проходить по каждой строке матрицы H. Для каждой строки будем проходить по каждому столбцу. Для каждого столбца мы проверяем, можно ли добавить его в стек (если его высота больше или равна высоте столбца на вершине стека).</p>
+    <p>Если в ячейке ненулевая высота, то проверяем если стек пустой, то кладем в него высоту H[i][j] и запоминаем текущую высоту. Если стек не пустой, проверяем если текущая высота не более высоты H[i][j], то кладем в стек высоту H[i][j], иначе если высота H[i][j] меньше текущей высоты, то обновляем сумму, кладем высоту H[i][j] в стек и обновляем текущую высоту.</p>
     <p>Если в ячейке нулевая высота, проверяем если есть непосчитанная сумма, обновляем сумму, очищаем стек, обнуляем текущую высоту. Иначе ничего не делаем.</p>
     <p>При переходе на новую строку, проверяем если есть непосчитанная сумма обновляем сумму, очищаем стек, обнуляем текущую высоту и начинаем собирать новый прямоугольник. Иначе ничего не делаем.</p>
 
@@ -223,86 +246,106 @@ int main() {
     int n, m; // размер мозаики
     cin >> n >> m;
 
-    vector&lt;string&gt; A(n+1); // первая мозаика
+    vector&lt;string&gt; A(n); // первая мозаика
     for (int i = 0; i &lt; n; i++) {
       cin >> A[i];
     }
-    vector&lt;string&gt; B(n+1); // вторая мозаика
+    vector&lt;string&gt; B(n); // вторая мозаика
     for (int i = 0; i &lt; n; i++) {
       cin >> B[i];
     }
 
-    // матрица из n+1 строк и m+1 столбцов
+    // матрица из n+1 строк и m столбцов
     // заполненная нулями
-    vector&lt;vector&lt;int&gt; &gt; DP(n+1, vector&lt;int&gt; (m+1, 0));
+    vector&lt;vector&lt;int&gt; &gt; H(n + 1, vector&lt;int&gt;(m, 0));
 
     // для каждой ячейки посчитаем число
     // совпадающих ячеек вниз
-    for (int i = n-1; i >= 0; i--) {
+    for (int i = n - 1; i >= 0; i--) {
       for (int j = 0; j &lt; m; j++) {
         if (A[i][j] == B[i][j]) {
-          DP[i][j] = DP[i + 1][j] + 1;
+          H[i][j] = H[i + 1][j] + 1;
         } else {
-          DP[i][j] = 0;
+          H[i][j] = 0;
         }
       }
     }
 
-    stack&lt;int&gt; st;
-    int cur_h = 0; // текущая высота
-    int cur_sum = 0; // текущая сумма
-    int sum = 0; // сумма
+    stack&lt;int&gt; st; // стек для индексов столбцов
+    int h = 0; // высота прямоугольника
+    int cur_area = 0; // текущая площадь
+    int area = 0; // максимальная площадь
 
-    // считаем максимальную сумму прямоугольника
-    // если каждый элемент поставить
-    // в левый верхний угол прямоугольника
+    // для каждой строки
     for (int i = 0; i &lt; n; i++) {
-      for (int j = 0; j &lt; m; j++) {
-        if (DP[i][j]) {
-          // если есть столбик вниз
+      int j = 0; // индекс столбца
+
+      // для каждого столбца
+      while (j &lt; m) {
+        if (H[i][j]) {
+          // если есть высота
+
           if (st.empty()) {
-            st.push(DP[i][j]);
-            cur_h = st.top();
-          } else if (cur_h &lt;= DP[i][j]) {
-            st.push(DP[i][j]);
+            // если стек пуст
+            st.push(j);
+            h = H[i][st.top()];
+            j++;
+
+          } else if (h &lt;= H[i][j]) {
+            // если столбец не меньше высоты
+            st.push(j);
+            h = H[i][st.top()];
+            j++;
+
           } else {
-            st.push(DP[i][j]);
-            cur_h = st.top();
-            // обновить сумму
-            cur_sum = st.size() * cur_h;
-            sum = max(sum, cur_sum);
-          }
-        } else if (cur_h) {
-          // если нет столбика вниз
-          // но есть непосчитанная сумма
-          // обновить сумму
-          cur_sum = st.size() * cur_h;
-          sum = max(sum, cur_sum);
-          // очистить стек
-          while (st.size()) {
+            // если столбец меньше высоты
+            // берем верхний индекс и удаляем из стека
+            h = H[i][st.top()];
             st.pop();
+
+            // обновить площадь
+            cur_area = h * (st.empty() ? j : j - st.top() - 1);
+            area = max(area, cur_area);
           }
-          // очистить текущую высоту
-          cur_h = 0;
+
+        } else {
+          // если нет высоты
+          // обработать оставшиеся в стеке индексы
+          while (!st.empty()) {
+            // пока в стеке есть индексы
+            // берем верхний индес и удаляем из стека
+            h = H[i][st.top()];
+            st.pop();
+
+            // обновить площадь
+            cur_area = h * (st.empty() ? j : j - st.top() - 1);
+            area = max(area, cur_area);
+          }
+
+          // очистить высоту
+          h = 0;
+          j++;
         }
       }
 
       // при переходе на новую строчку
-      if (cur_h) {
-        // если есть непосчитанная сумма
-        // обновить сумму
-        cur_sum = st.size() * cur_h;
-        sum = max(sum, cur_sum);
-        // очистить стек
-        while (st.size()) {
-          st.pop();
-        }
-        // очистить текущую высоту
-        cur_h = 0;
+      // обработать оставшиеся в стеке индексы
+      while (!st.empty()) {
+        // пока в стеке есть индексы
+        // берем верхний индес и удаляем из стека
+        h = H[i][st.top()];
+        st.pop();
+
+        // обновить площадь
+        cur_area = h * (st.empty() ? j : j - st.top() - 1);
+        area = max(area, cur_area);
       }
+
+      // очистить высоту
+      h = 0;
     }
 
-    cout &lt;&lt; sum &lt;&lt; '\n';
+    cout &lt;&lt; area &lt;&lt; '\n';
   }
 }
 </pre>
